defect #2797114: fix compatibility problems - upgrade intellij plugin to 2.x version; build the plugin with javafx integrated since javafx will no longer be available in intellij; remove plugin-withJavaFX.xml file; refactor date time picker component (the microba will no longer be available); increase version to CE-25.2; upgrade gradle distribution to 8.14;